<resources>
    <string name="app_name">Ticket Now</string>
    <string name="cum_rap">Cụm rạp</string>
    <string name="thoi_gian">Thời gian</string>
    <string name="bat_dau">Từ</string>
    <string name="ket_thuc">Đến</string>
    <string name="tim">Tìm</string>
    <string name="reset">Reset</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
